# cloudflare-ddns-update

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build_and_test.yml
src/: args.rs  main.rs
