[package]
name = "cloudflare-ddns"
version = "0.1.0"
authors = ["Jake Wharton <jakewharton@gmail.com>"]
edition = "2018"
description = "Update the value of a Cloudflare DNS record to your public IP"
keywords = ["cloudflare", "dynamic dns", "ddns", "dns"]
categories = ["command-line-utilities"]
license = "Apache-2.0"
repository = "https://github.com/JakeWharton/cloudflare-ddns"

[dependencies]
cloudflare = "0.5.0"
exitfailure = "0.5.1"
failure = "0.1.6"
reqwest = { version = "0.10.0", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.clap]
version = "2.33.0"
default-features = false
